--- a/jupyter/analisis_exploratorio/analisis_explo.ipynb
+++ b/jupyter/analisis_exploratorio/analisis_explo.ipynb
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "95eb4f2c",
+   "id": "830ee7b8",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73cd2704",
+   "id": "7dbb6831",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40ab797e",
+   "id": "b577e0d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1311,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "5de32d7e",
+   "id": "82a66b13",
    "metadata": {
     "scrolled": true
    },
@@ -1445,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f0173e08",
+   "id": "e67ffdb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5345,7 +5345,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d36655bf",
+   "id": "32288445",
    "metadata": {},
    "outputs": [
     {
@@ -7999,7 +7999,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0634845a",
+   "id": "bee9cead",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8020,7 +8020,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "c57fc440",
+   "id": "6ea69d08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8033,7 +8033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47dec94b",
+   "id": "1c2109e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8041,7 +8041,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "ba0072c1",
+   "id": "440ee1b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8073,7 +8073,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "022672f7",
+   "id": "1d1bd765",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8083,7 +8083,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "5105a6aa",
+   "id": "dec7761f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8093,7 +8093,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "a027c71d",
+   "id": "bde58d8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8103,7 +8103,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "158ffd7b",
+   "id": "a7144122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8119,7 +8119,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "15eea823",
+   "id": "84e0d67f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8129,7 +8129,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "61943187",
+   "id": "9199ba5a",
    "metadata": {},
    "outputs": [
     {
@@ -8172,7 +8172,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "39bcf616",
+   "id": "cd280a62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8183,7 +8183,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "23855da7",
+   "id": "562e547b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8197,7 +8197,61 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "239dd283",
+   "id": "d19660a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mad_int['municipio'] = 'madrid'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "8c2c75e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17824 entries, 0 to 17823\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   descripcion     17824 non-null  int64  \n",
+      " 1   zona            17824 non-null  object \n",
+      " 2   distrito        17824 non-null  object \n",
+      " 3   precio          17824 non-null  int64  \n",
+      " 4   superficie      17824 non-null  int64  \n",
+      " 5   habitaciones    17824 non-null  int64  \n",
+      " 6   plantas         17824 non-null  int64  \n",
+      " 7   caract          17824 non-null  int64  \n",
+      " 8   ascensor        17824 non-null  int64  \n",
+      " 9   €/m2            17824 non-null  float64\n",
+      " 10  distrito_€/m2   17824 non-null  float64\n",
+      " 11  pais            17824 non-null  object \n",
+      " 12  ciudad          17824 non-null  object \n",
+      " 13  codigo_postal   17824 non-null  object \n",
+      " 14  codigo_postal0  17824 non-null  int32  \n",
+      " 15  codigo_postal1  17824 non-null  int32  \n",
+      " 16  codigo_postal2  17824 non-null  int32  \n",
+      " 17  codigo_postal3  17824 non-null  int32  \n",
+      " 18  codigo_postal4  17824 non-null  int32  \n",
+      " 19  municipio       17824 non-null  object \n",
+      "dtypes: float64(2), int32(5), int64(7), object(6)\n",
+      "memory usage: 2.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "mad_int.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "9ecad9f3",
    "metadata": {},
    "outputs": [
     {
@@ -8211,7 +8265,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8222,16 +8276,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c3b6210",
+   "execution_count": 137,
+   "id": "31d511b0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>descripcion</th>\n",
+       "      <th>zona</th>\n",
+       "      <th>distrito</th>\n",
+       "      <th>precio</th>\n",
+       "      <th>superficie</th>\n",
+       "      <th>habitaciones</th>\n",
+       "      <th>plantas</th>\n",
+       "      <th>caract</th>\n",
+       "      <th>ascensor</th>\n",
+       "      <th>€/m2</th>\n",
+       "      <th>distrito_€/m2</th>\n",
+       "      <th>pais</th>\n",
+       "      <th>ciudad</th>\n",
+       "      <th>codigo_postal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>central</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>26100</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>442.37</td>\n",
+       "      <td>2109.77</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>central</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>50600</td>\n",
+       "      <td>53</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>954.72</td>\n",
+       "      <td>2109.77</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>central</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>51700</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>861.67</td>\n",
+       "      <td>2109.77</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>central</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>51700</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>861.67</td>\n",
+       "      <td>2109.77</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>central</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>51700</td>\n",
+       "      <td>59</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>876.27</td>\n",
+       "      <td>2109.77</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17819</th>\n",
+       "      <td>1</td>\n",
+       "      <td>central</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>1250000</td>\n",
+       "      <td>302</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4139.07</td>\n",
+       "      <td>4700.68</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28005, 28045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17820</th>\n",
+       "      <td>1</td>\n",
+       "      <td>central</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>1250000</td>\n",
+       "      <td>380</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3289.47</td>\n",
+       "      <td>4700.68</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28005, 28045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17821</th>\n",
+       "      <td>0</td>\n",
+       "      <td>central</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>1300000</td>\n",
+       "      <td>360</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3611.11</td>\n",
+       "      <td>4700.68</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28005, 28045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17822</th>\n",
+       "      <td>0</td>\n",
+       "      <td>central</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>1333000</td>\n",
+       "      <td>214</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6228.97</td>\n",
+       "      <td>4700.68</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28005, 28045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17823</th>\n",
+       "      <td>0</td>\n",
+       "      <td>central</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>1463000</td>\n",
+       "      <td>284</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5151.41</td>\n",
+       "      <td>4700.68</td>\n",
+       "      <td>españa</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>28005, 28045</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17824 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       descripcion     zona    distrito   precio  superficie  habitaciones  \\\n",
+       "0                0  central  villaverde    26100          59             2   \n",
+       "1                0  central  villaverde    50600          53             3   \n",
+       "2                0  central  villaverde    51700          60             3   \n",
+       "3                0  central  villaverde    51700          60             3   \n",
+       "4                0  central  villaverde    51700          59             3   \n",
+       "...            ...      ...         ...      ...         ...           ...   \n",
+       "17819            1  central  arganzuela  1250000         302             5   \n",
+       "17820            1  central  arganzuela  1250000         380             2   \n",
+       "17821            0  central  arganzuela  1300000         360             4   \n",
+       "17822            0  central  arganzuela  1333000         214             4   \n",
+       "17823            0  central  arganzuela  1463000         284             4   \n",
+       "\n",
+       "       plantas  caract  ascensor    €/m2  distrito_€/m2    pais  ciudad  \\\n",
+       "0            3       3         0  442.37        2109.77  españa  madrid   \n",
+       "1            2       3         3  954.72        2109.77  españa  madrid   \n",
+       "2            3       1         0  861.67        2109.77  españa  madrid   \n",
+       "3            3       3         0  861.67        2109.77  españa  madrid   \n",
+       "4            4       1         0  876.27        2109.77  españa  madrid   \n",
+       "...        ...     ...       ...     ...            ...     ...     ...   \n",
+       "17819       -4       2         2 4139.07        4700.68  españa  madrid   \n",
+       "17820       -4       2         2 3289.47        4700.68  españa  madrid   \n",
+       "17821       -3       1         1 3611.11        4700.68  españa  madrid   \n",
+       "17822        6       1         1 6228.97        4700.68  españa  madrid   \n",
+       "17823        6       1         1 5151.41        4700.68  españa  madrid   \n",
+       "\n",
+       "      codigo_postal  \n",
+       "0             28021  \n",
+       "1             28021  \n",
+       "2             28021  \n",
+       "3             28021  \n",
+       "4             28021  \n",
+       "...             ...  \n",
+       "17819  28005, 28045  \n",
+       "17820  28005, 28045  \n",
+       "17821  28005, 28045  \n",
+       "17822  28005, 28045  \n",
+       "17823  28005, 28045  \n",
+       "\n",
+       "[17824 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mad_int_prueba"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "4e43212a",
+   "execution_count": 138,
+   "id": "3c0d194e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8240,8 +8574,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "964cb023",
+   "execution_count": 139,
+   "id": "080db09a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8250,7 +8584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 140,
    "id": "ae4917ba",
    "metadata": {},
    "outputs": [],
@@ -8260,7 +8594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 141,
    "id": "acfb8f97",
    "metadata": {},
    "outputs": [],
@@ -8270,7 +8604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 142,
    "id": "21728e26",
    "metadata": {},
    "outputs": [],
@@ -8280,7 +8614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 143,
    "id": "4f101fc4",
    "metadata": {},
    "outputs": [],
