--- a/jupyter/modelo_tasacion/modelo_tasacion_alquiler_latina.ipynb
+++ b/jupyter/modelo_tasacion/modelo_tasacion_alquiler_latina.ipynb
@@ -2083,7 +2083,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.to_excel('latina_tasacion_alquiler.xlsx', index=False)"
+    "con.to_excel('latina_tasacion_alquiler.xlsx')"
    ]
   }
  ],
