--- a/jupyter/modelo_tasacion/modelo_tasacion_compra_latina.ipynb
+++ b/jupyter/modelo_tasacion/modelo_tasacion_compra_latina.ipynb
@@ -4520,7 +4520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.to_excel('latina_tasacion_compra.xlsx', index=False)"
+    "con.to_excel('latina_tasacion_compra.xlsx')"
    ]
   },
   {
