--- a/jupyter/espana/Analisis_espana.ipynb
+++ b/jupyter/espana/Analisis_espana.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd03ba83",
+   "id": "bf3c0a01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e3b0db59",
+   "id": "53c5f1f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "45dfd53e",
+   "id": "563cc75b",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e1e765bd",
+   "id": "af163506",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "136f1769",
+   "id": "0f7c45de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "98d9bf7b",
+   "id": "f54ae55d",
    "metadata": {
     "scrolled": true
    },
@@ -1648,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c826a6dd",
+   "id": "fdbc6cfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4e3603a5",
+   "id": "69e9cf6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e11375d6",
+   "id": "adbd0d67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1683,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5725bb40",
+   "id": "29226d27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e1d48857",
+   "id": "4e3b7a7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "15e3839a",
+   "id": "603fb80d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1718,7 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c4ea2b11",
+   "id": "3032c15c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e79fa46b",
+   "id": "2b19b9d7",
    "metadata": {},
    "outputs": [
     {
@@ -2228,7 +2228,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "83d8217d",
+   "id": "b941b68d",
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2733,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1f10eab7",
+   "id": "7e7d19c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2744,7 +2744,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "04f73589",
+   "id": "167b58e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2755,7 +2755,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3a6924f5",
+   "id": "841850f9",
    "metadata": {
     "scrolled": true
    },
@@ -2884,7 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9e6222a7",
+   "id": "dad1a7ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2899,7 +2899,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dcc71706",
+   "id": "e4ceaabd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2910,7 +2910,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "15dba7ca",
+   "id": "10f7670b",
    "metadata": {},
    "outputs": [
     {
@@ -2971,13 +2971,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "c377967c",
    "metadata": {},
    "outputs": [],
    "source": [
     "df1.to_csv('espana_compra.csv', index=False)\n",
-    "df2.to_csv('espana_compra.csv', index=False)"
+    "df2.to_csv('espana_alquiler.csv', index=False)"
    ]
   }
  ],
